@@ -184,9 +184,9 @@ func (in *BootstrapConfiguration) DeepCopyInto(out *BootstrapConfiguration) {
 		*out = new(BootstrapInitDB)
 		(*in).DeepCopyInto(*out)
 	}
-	if in.FullRecovery != nil {
-		in, out := &in.FullRecovery, &out.FullRecovery
-		*out = new(BootstrapFullRecovery)
+	if in.Recovery != nil {
+		in, out := &in.Recovery, &out.Recovery
+		*out = new(BootstrapRecovery)
 		(*in).DeepCopyInto(*out)
 	}
 }
@@ -197,27 +197,6 @@ func (in *BootstrapConfiguration) DeepCopy() *BootstrapConfiguration {
 		return nil
 	}
 	out := new(BootstrapConfiguration)
-	in.DeepCopyInto(out)
-	return out
-}
-
-// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
-func (in *BootstrapFullRecovery) DeepCopyInto(out *BootstrapFullRecovery) {
-	*out = *in
-	out.Backup = in.Backup
-	if in.RecoveryTarget != nil {
-		in, out := &in.RecoveryTarget, &out.RecoveryTarget
-		*out = new(RecoveryTarget)
-		(*in).DeepCopyInto(*out)
-	}
-}
-
-// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new BootstrapFullRecovery.
-func (in *BootstrapFullRecovery) DeepCopy() *BootstrapFullRecovery {
-	if in == nil {
-		return nil
-	}
-	out := new(BootstrapFullRecovery)
 	in.DeepCopyInto(out)
 	return out
 }
@@ -243,6 +222,27 @@ func (in *BootstrapInitDB) DeepCopy() *BootstrapInitDB {
 		return nil
 	}
 	out := new(BootstrapInitDB)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *BootstrapRecovery) DeepCopyInto(out *BootstrapRecovery) {
+	*out = *in
+	out.Backup = in.Backup
+	if in.RecoveryTarget != nil {
+		in, out := &in.RecoveryTarget, &out.RecoveryTarget
+		*out = new(RecoveryTarget)
+		(*in).DeepCopyInto(*out)
+	}
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new BootstrapRecovery.
+func (in *BootstrapRecovery) DeepCopy() *BootstrapRecovery {
+	if in == nil {
+		return nil
+	}
+	out := new(BootstrapRecovery)
 	in.DeepCopyInto(out)
 	return out
 }
